--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^5.3.4",
     "react-scripts": "4.0.3",
     "whatwg-fetch": "^3.6.2"
   },
